--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "gun": "^0.2020.1240",
     "jsonstream": "^1.0.3",
+    "marked": "^16.0.0",
     "openai": "^5.8.2"
   }
 }
